--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -1,2 +1,5 @@
 @import './variables/variables';
 @import './vendor/reset';
+@import './variables/mixins';
+@import './variables/typography';
+@import './layout/mobile';
