added class hidden and implemented the logic to hide the login and show the lobby

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -208,4 +208,8 @@ section ul li {
   display: flex;
   flex-direction: column;
   gap: 1em;
+}
+
+.hidden {
+  visibility: hidden;
 }/*# sourceMappingURL=style.css.map */
