--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -53,3 +53,35 @@ section h2 {
 section ul li {
   @include gap-column-1;
 }
+
+#gameSection {
+  display: flex;
+  flex-direction: row;
+  background-color: #CEF6FF;
+  padding: 20px;
+}
+
+#frame {
+  background-color: lightgrey;
+  border: solid black 2px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#guessingContainer {
+  #guessInstruction {
+    color: red;
+  }
+}
+
+#gameChatContainer{
+  background-color: lightgray;
+  margin-top: 10px;
+  padding: 10px;
+  #chatList{
+    margin-bottom: 20px;
+  }
+  #gameChatInput {
+    border-radius: 20px;
+  }
+}
