--- a/client/src/styles/variables/_variables.scss
+++ b/client/src/styles/variables/_variables.scss
@@ -1,3 +1,7 @@
 $sticky-header-bg: #ffffff;
 $login-button-color: #2980b9;
 $debugging: true;
+$game-bg: #CEF6FF;
+$alert-text: rgb(148, 22, 22);
+$light-gray: lightgray;
+$canvas-border: rgb(12, 12, 12);
