--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -218,14 +218,14 @@ section ul li {
 }
 
 #frame {
-  background-color: lightgrey;
-  border: solid black 2px;
+  background-color: lightgray;
+  border: solid rgb(12, 12, 12) 2px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 #guessingContainer #guessInstruction {
-  color: red;
+  color: rgb(148, 22, 22);
 }
 
 #gameChatContainer {
