--- a/client/src/styles/variables/_variables.scss
+++ b/client/src/styles/variables/_variables.scss
@@ -4,4 +4,5 @@ $debugging: true;
 $game-bg: #CEF6FF;
 $alert-text: rgb(148, 22, 22);
 $light-gray: lightgray;
+$guess-bg: rgb(175, 173, 173);
 $canvas-border: rgb(12, 12, 12);
