--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -80,8 +80,18 @@ section ul li {
   padding: 10px;
   #chatList{
     margin-bottom: 20px;
+    max-height: 200px; 
+    overflow-y: auto;
+    li {
+      background-color: $guess-bg;
+      margin: 10px;
+      height: 1.5rem;
+      border-radius: 10px;
+      padding: 5px;
+    }
   }
-  #gameChatInput {
-    border-radius: 20px;
+  #guessInput {
+    border-radius: 10px;
+    height: 1.5rem;
   }
 }
