--- a/client/src/styles/variables/_mixins.scss
+++ b/client/src/styles/variables/_mixins.scss
@@ -4,19 +4,30 @@
   justify-content: center;
 }
 
-@mixin sticky-header {
-  position: sticky;
+@mixin flex-between-center {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@mixin fixed-header {
+  position: fixed;
+  display: flex;
   top: 0;
-  background-color: $sticky-header-bg;
-  z-index: 1000;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 99;
 }
 
 @mixin gap-column-1 {
   display: flex;
   flex-direction: column;
   gap: 1em;
+}
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 @mixin gap-row-1 {
