--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -1,48 +1,299 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
 body {
-  font-family: var(--ff-sans-normal);
+  min-height: 100vh;
+  width: 100%;
+}
+
+body {
+  @include flex-column;
+  align-items: center;
+  font-family: $main-font;
+  background: $primary-background;
+  color: $gray-color;
 }
 
 header {
-  @include sticky-header;
-  text-align: center;
-  padding: 2em;
-  text-transform: uppercase;
-  gap: 1em;
-}
+  @include fixed-header;
+  width: 100%;
+  padding: 0 20px;
+  height: 70px;
 
-header p {
-  font-size: 1em;
-}
+  background-color: $primary-background;
+  .game-logo {
+    display: flex;
+    gap: 10px;
+    h1 {
+      font-size: 2rem;
+      color: $turquoise;
+    }
+  }
 
-h1 {
-  font-size: 2em;
+  div {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    .user-icon {
+      width: 50px;
+      height: 50px;
+      @include center-element;
+      border-radius: 42.5px;
+      background: $secondary-background;
+      box-shadow: $user-shadow;
+    }
+    p {
+      font-size: 1rem;
+    }
+  }
 }
 
 main {
-  @include center-element;
+  align-items: center;
   @include debug-outline;
   @include gap-column-1;
-  padding: 2em;
-  margin: 1em;
+  flex: 1;
 }
 
-section {
+// ** LOGIN SECTION **
+
+.login-section {
+  margin-top: 35%;
+  gap: 100px;
+  .pictonary {
+    width: 300px;
+    @include flex-column;
+    align-items: center;
+    gap: 20px;
+    img {
+      width: 280px;
+      height: 100px;
+    }
+    p {
+      width: 250px;
+      text-align: center;
+      font-size: 0.875rem;
+      font-weight: 300;
+      span {
+        color: $turquoise;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .login-container {
+    @include flex-column;
+    gap: 20px;
+    .input-panel {
+      display: flex;
+      gap: 20px;
+      .login-input {
+        outline: none;
+        border: none;
+        height: 50px;
+        width: 250px;
+        padding-left: 20px;
+        border-radius: 42.5px;
+        background: $secondary-background;
+        box-shadow: $input-shadow;
+      }
+    }
+  }
+}
+
+// ** GAME LOBBY **
+
+.game-lobby-section {
+  margin-top: 100px;
+  @include flex-column;
+  align-items: center;
+  gap: 50px;
+  .lobby-container {
+    display: flex;
+    align-items: flex-end;
+    gap: 50px;
+    .game-lobby-list {
+      padding: 30px;
+      width: 400px;
+      height: 400px;
+      flex-shrink: 0;
+      border-radius: 43px;
+      @include flex-column;
+      gap: 15px;
+      background: $primary-background;
+      box-shadow: $lobby-list-shadow;
+      li {
+        div {
+          @include center-element;
+          justify-content: space-between;
+        }
+      }
+    }
+    .lobby-chat {
+      padding: 30px;
+      width: 300px;
+      height: 350px;
+      padding: 20px 25px;
+      flex-shrink: 0;
+      border-radius: 30px;
+      @include flex-column;
+      gap: 20px;
+      background: $primary-background;
+      box-shadow: $lobby-shadow;
+      .chat-panel {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+      }
+      .chat-container {
+        width: 100%;
+        height: 200px;
+        background: $chat-color;
+        border-radius: 16px;
+        box-shadow: $icon-shadow;
+      }
+      .chat-input-panel {
+        @include flex-between-center;
+        input {
+          outline: none;
+          border: none;
+          border-radius: 14px;
+          background-color: $secondary-background;
+          height: 30px;
+          padding-left: 10px;
+          color: $gray-color;
+          box-shadow: $input-shadow;
+          &::placeholder {
+            opacity: 70%;
+          }
+        }
+      }
+    }
+  }
+
+  .start-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    .start-panel {
+      width: 400px;
+      padding: 20px;
+      border-radius: 15px;
+      background: $primary-background;
+      box-shadow: $small-container-shadow;
+      @include flex-between-center;
+      .player-ready-panel {
+        @include flex-column;
+        align-items: center;
+        gap: 30px;
+      }
+      .start-game-button {
+        font-size: 1.25rem;
+        width: 150px;
+      }
+    }
+
+    .rules {
+      display: flex;
+      width: 300px;
+      padding: 20px;
+      gap: 10px;
+      font-weight: 300;
+      border-radius: 15px;
+      background: $primary-background;
+      box-shadow: $small-container-shadow;
+      ul {
+        @include flex-column;
+        gap: 5px;
+      }
+    }
+  }
+}
+
+// ** GAME SECTION **
+
+.game-section {
+  @include flex-column;
+  background: $primary-background;
+  width: 100%;
+  gap: 50px;
+  .frame {
+    background-color: $light-gray;
+    border: solid $canvas-border 2px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    .canvas {
+      width: 600px;
+      height: 400px;
+      background-color: $chat-color;
+    }
+  }
+  .guessing-container {
+    .game-chat-container {
+      background-color: $light-gray;
+      margin-top: 10px;
+      padding: 10px;
+      .game-chat-list {
+        margin-bottom: 20px;
+        max-height: 200px;
+        overflow-y: auto;
+        li {
+          background-color: $guess-bg;
+          margin: 10px;
+          height: 1.5rem;
+          border-radius: 10px;
+          padding: 5px;
+        }
+      }
+      .guess-input {
+        border-radius: 10px;
+        height: 1.5rem;
+      }
+    }
+  }
+}
+
+// ** GENERAL STYLING **
+
+.icon-container {
   @include center-element;
-  @include debug-outline;
-  @include gap-column-1;
+  width: 45px;
+  height: 45px;
+  border-radius: 35.5px;
+  background: $secondary-background;
+  box-shadow: $icon-shadow;
 }
 
-ul {
-  @include debug-outline;
+.icon-hover:hover {
+  background-color: $icon-hover;
 }
 
 button {
-  background-color: $login-button-color;
-  color: white;
   border: none;
   padding: 1em 2em;
+  border-radius: 15px;
+  background: $secondary-background;
+  box-shadow: $button-shadow;
   border-radius: 16px;
   text-transform: uppercase;
+  cursor: pointer;
+  color: $gray-color;
+  font-family: $main-font;
+
+  &:hover {
+    color: $turquoise;
+  }
+}
+
+input {
+  font-family: $main-font;
+  font-size: smaller;
+  &::placeholder {
+    opacity: 70%;
+  }
 }
 
 section h2 {
@@ -54,44 +305,76 @@ section ul li {
   @include gap-column-1;
 }
 
-#gameSection {
+ul {
+  @include debug-outline;
+}
+
+.test-buttons {
+  position: absolute;
+  @include flex-column;
+  gap: 10px;
+  right: 50px;
+  top: 5%;
+}
+
+.ready {
+  width: 115px;
+  background-color: $turquoise;
+  color: $secondary-background;
+  box-shadow: inset 5px 5px 10px rgba(0, 76, 76, 0.3), inset -5px -5px 10px $darker-turquoise;
+  &:hover {
+    background: $ready-hover;
+    color: $secondary-background;
+  }
+}
+
+section {
+  @include center-element;
+  @include debug-outline;
+  @include gap-column-1;
+}
+
+.waiting {
+  border: none;
+  padding: 1em 2em;
+  border-radius: 15px;
+  background: $secondary-background;
+  box-shadow: $button-shadow;
+  border-radius: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: $gray-color;
+  font-family: $main-font;
+  &:hover {
+    color: $turquoise;
+  }
+}
+
+// ** For player list panel / DOT Container **
+
+.player-panel {
   display: flex;
-  flex-direction: row;
-  background-color: $game-bg;
-  padding: 20px;
-}
-
-#frame {
-  background-color: $light-gray;
-  border: solid $canvas-border 2px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-#guessingContainer {
-  #guessInstruction {
-    color: $alert-text;
-  }
-}
-
-#gameChatContainer{
-  background-color: $light-gray;
-  margin-top: 10px;
-  padding: 10px;
-  #chatList{
-    margin-bottom: 20px;
-    max-height: 200px; 
-    overflow-y: auto;
-    li {
-      background-color: $guess-bg;
-      margin: 10px;
-      height: 1.5rem;
-      border-radius: 10px;
-      padding: 5px;
+  align-items: center;
+  gap: 10px;
+  #dot-container {
+    height: 35px;
+    width: 35px;
+    @include center-element;
+    border-radius: 50%;
+    background: $secondary-background;
+    box-shadow: $dot-container;
+    .dot-panel {
+      @include center-element;
+      border-radius: 50%;
+      background: $secondary-background;
+      box-shadow: $dot-panel;
+      height: 25px;
+      width: 25px;
+      .list-dot {
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+      }
     }
-  }
-  #guessInput {
-    border-radius: 10px;
-    height: 1.5rem;
   }
 }
