--- a/client/src/styles/variables/_variables.scss
+++ b/client/src/styles/variables/_variables.scss
@@ -33,3 +33,4 @@ $dot-panel: 3px 3px 6px #d0d0d0, -3px -3px 6px #ffffff;
 // Fonts
 
 $main-font: 'Montserrat', sans-serif;
+$secondary-font: 'Lato', sans-serif;
