--- a/client/src/styles/variables/_variables.scss
+++ b/client/src/styles/variables/_variables.scss
@@ -29,6 +29,7 @@ $user-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.08), -10px -10px 20px 0px #fff;
 $button-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.09), -10px -10px 20px 0px #fff;
 $dot-container: inset 4px 4px 8px #e0e0e0, inset -4px -4px 8px #ffffff;
 $dot-panel: 3px 3px 6px #d0d0d0, -3px -3px 6px #ffffff;
+$start-shadow: 5px 5px 10px #a5a5a5, -5px -5px 10px #ffffff;
 
 // Fonts
 
