--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -148,12 +148,23 @@ main {
         gap: 20px;
         align-items: center;
       }
-      .chat-container {
+      .lobby-chat-container {
         width: 100%;
         height: 200px;
         background: $chat-color;
         border-radius: 16px;
         box-shadow: $icon-shadow;
+        @include flex-column;
+        padding: 10px 20px;
+        overflow-y: auto;
+        gap: 15px;
+        li {
+          p {
+            font-weight: 500;
+          }
+          display: flex;
+          gap: 15px;
+        }
       }
       .chat-input-panel {
         @include flex-between-center;
@@ -448,6 +459,26 @@ section {
   font-family: $main-font;
   &:hover {
     color: $turquoise;
+  }
+}
+
+.disabled {
+  background: $chat-color;
+  opacity: 50%;
+  &:hover {
+    color: $gray-color;
+    cursor: auto;
+  }
+}
+
+.active {
+  background: $turquoise;
+  color: $primary-background;
+  box-shadow: $start-shadow;
+  &:hover {
+    cursor: pointer;
+    background: $ready-hover;
+    color: $primary-background;
   }
 }
 
