--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -21,6 +21,7 @@ header {
   width: 100%;
   padding: 0 20px;
   height: 70px;
+  box-shadow: 1px 1px 3px lightgrey;
 
   background-color: $primary-background;
   .game-logo {
@@ -55,7 +56,6 @@ main {
   @include debug-outline;
   @include gap-column-1;
   flex: 1;
-  width: 100%;
 }
 
 // ** LOGIN SECTION **
@@ -233,7 +233,6 @@ main {
   background: $primary-background;
   width: 100%;
   gap: 50px;
-  margin-top: 100px;
   .random-container {
     margin-left: 50px;
     width: 100%;
@@ -425,6 +424,19 @@ main {
   }
 }
 
+// ** END SECTION ** //
+
+.end-section {
+  .score-board {
+    border-radius: 16px;
+    width: 260px;
+    padding: 20px;
+    background: $primary-background;
+    box-shadow: $lobby-shadow;
+    min-height: 500px;
+  }
+}
+
 // ** GENERAL STYLING **
 
 .icon-container {
@@ -494,6 +506,8 @@ ul {
 }
 
 section {
+  min-height: calc(100vh - 70px);
+  margin-top: 70px;
   @include center-element;
   @include debug-outline;
   @include gap-column-1;
