--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -440,6 +440,22 @@ main {
   width: 160px;
   height: 40px;
 }
+.game-section .main-section article .frame .canvas-bottom-panel .erase-panel {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.game-section .main-section article .frame .canvas-bottom-panel .erase-panel #drawButton,
+.game-section .main-section article .frame .canvas-bottom-panel .erase-panel #eraseButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border-radius: 35.5px;
+  background: #f9f9f9;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.08), -5px -5px 20px 0px #fff;
+}
 .game-section .main-section article .frame .canvas-bottom-panel .draw-options {
   height: 40px;
   gap: 10px;
@@ -748,6 +764,32 @@ section {
 
 .black {
   background: black;
+}
+
+.selected {
+  background: #12b7b6 !important;
+  padding: 0px !important;
+  color: #f9f9f9 !important;
+  box-shadow: inset 5px 5px 10px rgba(0, 76, 76, 0.3), inset -5px -5px 10px #1edede !important;
+}
+.selected svg {
+  color: #f9f9f9 !important;
+  pointer-events: none;
+}
+.selected:hover {
+  background: #1bdcdc !important;
+  color: #f9f9f9 !important;
+}
+
+.inactive {
+  padding: 0px !important;
+}
+.inactive svg {
+  color: #12b7b6 !important;
+  pointer-events: none;
+}
+.inactive:hover {
+  background: #f1eeee !important;
 }
 
 .hidden {
