--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -22,6 +22,7 @@ header {
   padding: 0 20px;
   height: 70px;
   box-shadow: 1px 1px 3px lightgrey;
+  z-index: 10;
 
   background-color: $primary-background;
   .game-logo {
@@ -274,7 +275,7 @@ main {
           justify-content: space-between;
           width: 100%;
           padding: 0 20px;
-          button {
+          #clearCanvasButton {
             box-shadow: $dot-panel;
             width: 160px;
             height: 40px;
@@ -660,6 +661,27 @@ section {
 
 .black {
   background: black;
+}
+
+.lightbox {
+  background: black;
+  opacity: 10%;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 20;
+}
+
+.next-round-timer {
+  z-index: 99;
+  font-size: 4rem;
+  color: $turquoise;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateY(-50%);
+  transform: translateX(-50%);
 }
 
 .selected {
