--- a/client/src/styles/layout/_mobile.scss
+++ b/client/src/styles/layout/_mobile.scss
@@ -475,7 +475,7 @@ main {
       }
       li:first-child span:nth-child(2)::after,
       li:first-child span:nth-child(2)::before {
-        content: url(/assets/images/star.png);
+        content: url(../../../assets/images/star.png);
         position: absolute;
         padding: 0 10px;
         top: -40px;
